[gd_scene load_steps=2 format=3 uid="uid://ck6nnsw7sapke"]

[ext_resource type="Script" path="res://UI Scenes/Overview Tabs/threat_intel_item.gd" id="1_7hms0"]

[node name="ThreatIntelItem" type="VBoxContainer"]
script = ExtResource("1_7hms0")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 2

[node name="ThreatItem" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Spacer" type="Label" parent="MarginContainer/ThreatItem"]
layout_mode = 2
text = "  -  "

[node name="ThreatName" type="Label" parent="MarginContainer/ThreatItem"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Unknown"

[node name="ThreatRisk" type="Label" parent="MarginContainer/ThreatItem"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Threat: Low"

[node name="Attacks" type="Label" parent="MarginContainer/ThreatItem"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Attacks: 0"

[node name="InfoButton" type="Button" parent="MarginContainer/ThreatItem"]
unique_name_in_owner = true
layout_mode = 2
text = "  Research  "

[node name="DescriptionBox" type="ScrollContainer" parent="."]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
size_flags_vertical = 3

[node name="Description" type="Label" parent="DescriptionBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Here is some template description.

Example: 101
Strengths: Web Attacks"

[node name="ResearchTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="ProgressBar" type="ProgressBar" parent="."]
visible = false
layout_mode = 2

[connection signal="pressed" from="MarginContainer/ThreatItem/InfoButton" to="." method="_on_info_button_pressed"]
[connection signal="timeout" from="ResearchTimer" to="." method="_on_timer_timeout"]
